datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  ADMIN
  USER
}

enum SliceState {
  //未切图或切图失败
  PENDING
  //切图中
  SLICING
  //切图并保存成功
  SUCCESS
}

enum Language {
  CHINESE
  ENGLISH
  JAPANESE
  KOREAN
}

model User {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  name      String
  role      Role
}

model ScenicRegion {
  id                      String             @id @default(uuid())
  createdAt               DateTime           @default(now())
  updatedAt               DateTime           @updatedAt
  location                String
  zoom                    Int
  minZoom                 Int
  maxZoom                 Int
  enableNavigation        Boolean
  enablePoiLanguageSwitch Boolean
  sliceState              SliceState         @default(PENDING)
  scenicSpots             ScenicSpot[]
  touringRoutes           TouringRoute[]
  scenicSpotTypes         ScenicSpotType[]
  scenicRegionInfos       ScenicRegionInfo[]
}

model ScenicRegionInfo {
  id                String       @id @default(uuid())
  createdAt         DateTime     @default(now())
  updatedAt         DateTime     @updatedAt
  scenicRegionId    String
  scenicRegion      ScenicRegion @relation(fields: [scenicRegionId], references: [id])
  name              String
  title             String
  layer             String
  layersDisplayName String
  vrUrl             String
  ticketUrl         String
  handDrawingUri    String
  handDrawingNE     String
  handDrawingSW     String
  lang              Language     @default(CHINESE)
}

model ScenicSpotType {
  id                  String               @id @default(uuid())
  createdAt           DateTime             @default(now())
  updatedAt           DateTime             @updatedAt
  rank                Int
  ScenicRegion        ScenicRegion?        @relation(fields: [scenicRegionId], references: [id])
  scenicRegionId      String?
  scenicSpots         ScenicSpot[]
  scenicSpotTypeInfos ScenicSpotTypeInfo[]
}

model ScenicSpotTypeInfo {
  id               String         @id @default(uuid())
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  scenicSpotTypeId String
  scenicSpotType   ScenicSpotType @relation(fields: [scenicSpotTypeId], references: [id])
  name             String
  lang             Language
}

model ScenicSpot {
  id               String           @id @default(uuid())
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  scenicRegionId   String
  scenicRegion     ScenicRegion     @relation(fields: [scenicRegionId], references: [id])
  scenicSpotTypeId String
  scenicSpotType   ScenicSpotType   @relation(fields: [scenicSpotTypeId], references: [id])
  hidden           Boolean
  scenicSpotInfos  ScenicSpotInfo[]
}

model ScenicSpotInfo {
  id           String     @id @default(uuid())
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  scenicSpotId String
  scenicSpot   ScenicSpot @relation(fields: [scenicSpotId], references: [id])
  name         String
  introduction String
  iconUri      String
  audioUri     String
  imageUri     String
  lang         Language   @default(CHINESE)
}

model TouringRoute {
  id                String             @id @default(uuid())
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  scenicRegionId    String
  scenicRegion      ScenicRegion       @relation(fields: [scenicRegionId], references: [id])
  touringRouteInfos TouringRouteInfo[]
}

model TouringRouteInfo {
  id             String       @id @default(uuid())
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  touringRouteId String
  touringRoute   TouringRoute @relation(fields: [touringRouteId], references: [id])
  title          String
  content        String
  lang           Language     @default(CHINESE)
}
