//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  role Role [not null]
}

Table ScenicRegion {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  location String [not null]
  zoom Int [not null]
  minZoom Int [not null]
  maxZoom Int [not null]
  enableNavigation Boolean [not null]
  enablePoiLanguageSwitch Boolean [not null]
  sliceState SliceState [not null, default: 'PENDING']
  scenicSpots ScenicSpot [not null]
  touringRoutes TouringRoute [not null]
  scenicSpotTypes ScenicSpotType [not null]
  scenicRegionInfos ScenicRegionInfo [not null]
}

Table ScenicRegionInfo {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  scenicRegionId String [not null]
  scenicRegion ScenicRegion [not null]
  name String [not null]
  title String [not null]
  layer String [not null]
  layersDisplayName String [not null]
  vrUrl String [not null]
  ticketUrl String [not null]
  handDrawingUri String [not null]
  handDrawingNE String [not null]
  handDrawingSW String [not null]
  lang Language [not null, default: 'CHINESE']
}

Table ScenicSpotType {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  rank Int [not null]
  ScenicRegion ScenicRegion
  scenicRegionId String
  scenicSpots ScenicSpot [not null]
  scenicSpotTypeInfos ScenicSpotTypeInfo [not null]
}

Table ScenicSpotTypeInfo {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  scenicSpotTypeId String [not null]
  scenicSpotType ScenicSpotType [not null]
  name String [not null]
  lang Language [not null]
}

Table ScenicSpot {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  scenicRegionId String [not null]
  scenicRegion ScenicRegion [not null]
  scenicSpotTypeId String [not null]
  scenicSpotType ScenicSpotType [not null]
  hidden Boolean [not null]
  scenicSpotInfos ScenicSpotInfo [not null]
}

Table ScenicSpotInfo {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  scenicSpotId String [not null]
  scenicSpot ScenicSpot [not null]
  name String [not null]
  introduction String [not null]
  iconUri String [not null]
  audioUri String [not null]
  imageUri String [not null]
  lang Language [not null, default: 'CHINESE']
}

Table TouringRoute {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  scenicRegionId String [not null]
  scenicRegion ScenicRegion [not null]
  touringRouteInfos TouringRouteInfo [not null]
}

Table TouringRouteInfo {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  touringRouteId String [not null]
  touringRoute TouringRoute [not null]
  title String [not null]
  content String [not null]
  lang Language [not null, default: 'CHINESE']
}

Enum Role {
  ADMIN
  USER
}

Enum SliceState {
  PENDING
  SLICING
  SUCCESS
}

Enum Language {
  CHINESE
  ENGLISH
  JAPANESE
  KOREAN
}

Ref: ScenicRegionInfo.scenicRegionId > ScenicRegion.id

Ref: ScenicSpotType.scenicRegionId > ScenicRegion.id

Ref: ScenicSpotTypeInfo.scenicSpotTypeId > ScenicSpotType.id

Ref: ScenicSpot.scenicRegionId > ScenicRegion.id

Ref: ScenicSpot.scenicSpotTypeId > ScenicSpotType.id

Ref: ScenicSpotInfo.scenicSpotId > ScenicSpot.id

Ref: TouringRoute.scenicRegionId > ScenicRegion.id

Ref: TouringRouteInfo.touringRouteId > TouringRoute.id